2004-01-13  Eric Blake  <ebb9@byu.net>

	* src/m4/ac_check_error_discard_const.m4: Further autoconf fixes;
	again, use AC_LANG_PROGRAM instead of AC_LANG_SOURCE.
	* src/m4/ac_check_iconv.m4: Ditto.
	* src/m4/ac_check_wcs_funcs.m4: Ditto.
	* src/m4/ac_cxx_bool.m4: Ditto.
	* src/m4/ac_cxx_check_ostream_const_unsigned_char_ptr.m4: Ditto.
	* src/m4/ac_cxx_check_set_new_handler.m4: Ditto.
	* src/m4/ac_cxx_const_cast.m4: Ditto.
	* src/m4/ac_cxx_dynamic_cast.m4: Ditto.
	* src/m4/ac_cxx_explicit.m4: Ditto.
	* src/m4/ac_cxx_have_std.m4: Ditto.
	* src/m4/ac_cxx_member_constants.m4: Ditto.
	* src/m4/ac_cxx_namespaces.m4: Ditto.
	* src/m4/ac_cxx_reinterpret_cast.m4: Ditto.
	* src/m4/ac_cxx_rtti.m4: Ditto.
	* src/m4/ac_cxx_static_cast.m4: Ditto.
	* src/m4/ac_try_encoding.m4: Ditto.
	* src/m4/acx_check_pathname_style.m4: Ditto.
	* configure: Regenerate.

2004-01-10  Eric Blake  <ebb9@byu.net>

	* src/m4/ac_cxx_check_set_new_handler.m4: More autoconf fixes;
	use AC_LANG_PROGRAM not AC_LANG_SOURCES.
	* configure: Regenerate with patched autoconf 2.59 (see
	http://mail.gnu.org/archive/html/autoconf-patches/2004-01/msg00033.html),
	so that autoconf -Wall is warning-free.
	* NEWS: Start filling in, to prepare for jikes 1.19.

2004-01-07  Eric Blake  <ebb9@byu.net>

	* doc/jikes.1: Add defaults to options with arguments. Bump
	copyright year.
	(-source): Bump default to 1.4.
	(-target): Bump default to 1.4.2.
	* src/jikes.cpp (main): Add defaults to options with arguments.
	* src/option.cpp (Option): Bump default for -source and -target.
	* src/platform.cpp (U8S_help_header): Bump copyright year.

2004-01-02  Eric Blake  <ebb9@byu.net>

	* autogen.sh: Add --copy to automake invocation.
	* configure.ac: Clean up autoconf -Wall warnings. Remove unused
	checks for max int sizes.
	* src/platform.h: Remove unused USHRT_MAX checks.
	* src/m4/ac_check_error_discard_const.m4: Clean up autoconf -Wall
	warnings.
	* src/m4/ac_check_iconv.m4: Ditto.
	* src/m4/ac_check_mathlib.m4: Ditto.